--- a/01.Guitar/style.css
+++ b/01.Guitar/style.css
@@ -35,7 +35,7 @@ html {
   }
   
   .playing {
-    transform: scale(1.1);
+    scale: 1.1;
     border-color: #ba2649;
     box-shadow: 0 0 1rem #ba2649;
   }
